# bureaucracy

./: BureaucracyConfig.cmake.in  CMakeLists.txt  COPYING  README.md  README.rst  diligentworker.cpp  diligentworker_test.cpp  dilligentworker.cpp  dilligentworker_test.cpp  doxyfile.in  expandingthreadpool.cpp  expandingthreadpool_test.cpp  pkg-config.pc.in  priorityworker.cpp  priorityworker_test.cpp  serialworker.cpp  serialworker_test.cpp  threadpool.cpp  threadpool_test.cpp  timer.cpp  timer_test.cpp
docs/: mainpage.md  workers.md
include/bureaucracy/: diligentworker.hpp  dilligentworker.hpp  expandingthreadpool.hpp  priorityworker.hpp  serialworker.hpp  threadpool.hpp  threadpoolbase.hpp  timer.hpp  worker.hpp  workercommon.hpp
timer/: CMakeLists.txt  timer.cpp  timer_test.cpp
worker/: CMakeLists.txt  diligentworker.cpp  diligentworker_test.cpp  expandingthreadpool.cpp  expandingthreadpool_test.cpp  priorityworker.cpp  priorityworker_test.cpp  serialworker.cpp  serialworker_test.cpp  threadpool.cpp  threadpool_internals.hpp  threadpool_test.cpp  threadpoolbase.cpp
